added ui changes to quesummary and allocation processes

--- a/frontend/web/themes/material-COC/assets/css/userstyle.css
+++ b/frontend/web/themes/material-COC/assets/css/userstyle.css
@@ -389,3 +389,11 @@ input:hover, #feedback-comment:hover, input:focus, #feedback-comment:focus {
     vertical-align: middle;
     float: none;
 }
+
+/*.panel-success .panel-heading	{
+	background-color:#f0d8e4
+}*/
+/*.well{
+
+ background-color:#ffcfcf;
+}*/
